<resources>
    <string name="app_name">Project_MAP</string>
    <string name="login_title">Welcome</string>
    <string name="login_prompt_register">Don\'t have an account? </string>
    <string name="login_button_signup">Sign up</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_prediksi">Prediksi</string>
    <string name="menu_statistik">Statistik</string>
    <string name="menu_profil">Profil</string>
    <string name="register_title">Create Account</string>
    <string name="register_prompt_login">Already have an account? </string>
    <string name="register_button_signin">Sign in</string>
    <string name="register_hint_full_name">Full Name</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_button_signup">Sign up</string>
    <string name="home_button_add">Tambah</string>
    <string name="home_button_predict">Prediksi</string>
    <string name="home_welcome_message">Halo, %1$s</string>
    <plurals name="home_product_count">
        <item quantity="one">Kamu memiliki %d produk yang siap diprediksi</item>
        <item quantity="other">Kamu memiliki %d produk yang siap diprediksi</item>
    </plurals>
    <string name="prediction_page_title">Halaman Prediksi Penjualan</string>
    <string name="prediction_feature_placeholder">Fitur ML akan ada di sini</string>
    <string name="product_form_title">Formulir Produk</string>
    <string name="product_form_hint_name">Nama Produk</string>
    <string name="product_form_hint_price">Harga Produk (Rp)</string>
    <string name="product_form_hint_stock">Stok Barang</string>
    <string name="product_form_hint_discount">Diskon (%)</string>
    <string name="product_form_label_category">Kategori Produk</string>
    <string name="product_form_checkbox_promo">Sedang dalam promosi</string>
    <string name="product_form_button_back">Kembali</string>
    <string name="product_form_button_save">Simpan</string>
    <string name="profile_header_title">Profil Pengguna</string>
    <string name="profile_hint_new_name">Masukkan nama baru</string>
    <string name="profile_button_edit">Edit Profil</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_button_change_photo">Ubah Foto Profil</string>
    <string name="profile_button_change_password">Ubah Password</string>
    <string name="profile_button_cancel">Batal</string>
    <string name="profile_button_save">Simpan</string>
    <string name="profile_hint_current_password">Password Saat Ini</string>
    <string name="profile_hint_new_password">Password Baru</string>
    <string name="profile_hint_confirm_password">Konfirmasi Password Baru</string>
    <string name="profile_button_back">Kembali</string>
    <string name="stats_page_title">Statistik Produk</string>
    <string name="stats_total_product">Total Produk</string>
    <string name="stats_average_price">Rata-rata Harga</string>
    <string name="stats_total_stock">Total Stok</string>
    <string name="stats_active_promo">Promo Aktif</string>
    <string name="product_item_button_edit">Edit</string>
    <string name="product_item_button_delete">Hapus</string>
</resources>